# ai_zeduav

./: README.md
code/tk1_cuda7.5_sdk094_opencv31/get_images/: CMakeLists.txt  README.txt
code/tk1_cuda7.5_sdk094_opencv31/get_images/src/: main.cpp
